--- a/Matchismo/Base.lproj/Main.storyboard
+++ b/Matchismo/Base.lproj/Main.storyboard
@@ -414,11 +414,19 @@
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="kZE-ut-GpE">
+                                <rect key="frame" x="18" y="450" width="284" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="changeSlider:" destination="vXZ-lx-hvc" eventType="valueChanged" id="mtn-uo-q8e"/>
+                                </connections>
+                            </slider>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.50196081399917603" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <connections>
                         <outlet property="flipDescription" destination="DFs-15-mKd" id="bJc-gW-Vkt"/>
+                        <outlet property="historySlider" destination="kZE-ut-GpE" id="hGx-GV-wwA"/>
                         <outlet property="modeSelector" destination="6zf-eR-Wzz" id="RGI-Tk-Cby"/>
                         <outlet property="scoreLabel" destination="yFN-sR-2f7" id="qg9-Nx-SDW"/>
                         <outletCollection property="cardButtons" destination="gic-qA-tDr" id="5lj-Pt-MaJ"/>
